<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="org.androidtown.termi02.SignIn">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="165.7dp"
            android:layout_height="67.7dp"
            android:src="@drawable/page_1"
            android:id="@+id/login_img"
            android:layout_marginTop="107dp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/auto_login_layout"
            android:orientation="horizontal"
            android:layout_below="@id/login_img"
            android:layout_marginTop="61dp">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="27.7dp"
                android:layout_height="24dp"
                android:button="@drawable/custom_check_box"
                android:layout_marginLeft="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp"
                android:textColor="#8a212121"
                android:text="@string/auto_login"
                android:id="@+id/auto_login_text"
                android:layout_alignBaseline="@+id/checkBox"
                android:layout_alignBottom="@+id/checkBox"
                android:layout_marginLeft="6dp"/>
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/idEditText"
            android:background="@drawable/rectangle_24"
            android:layout_below="@id/auto_login_layout"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/input_id"
            android:textColor="@color/txt"
            android:textColorHint="#33000000"
            android:textSize="16dp"
            android:paddingLeft="21dp"
            android:maxLines="1"
            android:inputType="textVisiblePassword"/>
        <EditText
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:id="@+id/pwdEditText"
            android:background="@null"
            android:layout_below="@id/idEditText"
            android:layout_alignLeft="@id/idEditText"
            android:layout_marginTop="22dp"
            android:hint="@string/input_pwd"
            android:textColor="#8a262b4c"
            android:textColorHint="#33000000"
            android:textSize="16dp"
            android:paddingLeft="21dp"
            android:inputType="textPassword"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/line"
            android:id="@+id/line"
            android:layout_below="@id/pwdEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
        
        <Button
            android:layout_width="303.3dp"
            android:layout_height="36dp"
            android:id="@+id/login_button"
            android:layout_below="@id/line"
            android:layout_marginTop="26dp"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="303.3dp"
            android:layout_height="36dp"
            android:id="@+id/signUp"
            android:background="@drawable/custom_sign_up"
            style="?attr/borderlessButtonStyle"
            android:text="@string/sign_up"
            android:textColor="@color/txttitle"
            android:textSize="16dp"
            android:layout_below="@id/login_button"
            android:layout_marginTop="118dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
